# paros

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  book.toml  flake.nix  iframe-autosize.js  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: pages.yml  release-plz.yml  rust.yml
book/: CLAUDE.md  build-wasm-demo.sh
book/src/: SUMMARY.md  choose-one-value.md  durability.md  failures.md  further-reading.md  glossary.md  index.md  multi-paxos.md  multipaxos-leaders.md  multipaxos-log.md  one-driver.md  replicated-log.md  restart-safety.md  safety.md  sans-io.md  simulation.md  single-decree.md  stable-leader.md  wasm.md  why-consensus.md
docs/: CLAUDE.md
docs/analysis/go-raft/: etcd-raft-sans-io-patterns.md
docs/references/: CLAUDE.md
docs/references/ceph/: mon-paxos-patterns.md
docs/references/foundationdb/: cluster-controller-election.md
docs/references/frankenpaxos/: 01-framework-and-simulation.md  02-single-decree-paxos.md  03-multipaxos-core.md  04-compartmentalization.md  05-matchmaker-reconfiguration.md  README.md
docs/references/papers/flexible-paxos/: transcript.md
docs/references/papers/generalised-distributed-consensus/: transcript.md
docs/references/papers/paxos-made-moderately-complex/: transcript.md
docs/references/papers/paxos-made-simple/: transcript.md
docs/references/papers/paxos-vs-raft/: transcript.md
docs/references/papers/protocol-aware-recovery/: transcript.md
docs/references/talks/: paxos-google.md
paros/: CHANGELOG.md  Cargo.toml
paros-core/: CHANGELOG.md  Cargo.toml
paros-core/src/: lib.rs  message.rs  node.rs  ready.rs  state.rs  storage.rs  types.rs
paros-core/src/node/: tests.rs
paros-sim/: CHANGELOG.md  Cargo.toml
paros-sim-runner/: Cargo.toml
paros-sim-runner/src/: main.rs
paros-sim/src/: lib.rs  node.rs  oracle.rs  storage.rs  workload.rs
paros-sim/tests/: sim.rs
paros-storage/: Cargo.toml
paros-storage/src/: lib.rs
paros-wasm-demo/: Cargo.toml
paros-wasm-demo/src/: lib.rs
paros-wasm-demo/web/: index.html
paros/src/: driver.rs  lib.rs  storage.rs
references/papers/matchmaker-paxos/: transcript.md
references/papers/paxos-made-live/: transcript.md
references/papers/scaling-rsm-compartmentalization/: transcript.md
scripts/: sancov-rustc.sh
src/: lib.rs
xtask/src/: main.rs
