[workspace]
members = [
    "paros",
    "paros-core",
    "paros-sim",
    "paros-sim-runner",
    "paros-wasm-demo",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/PierreZ/paros"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
keywords = ["paxos", "consensus", "distributed-systems", "replication"]
categories = ["algorithms", "network-programming"]

[workspace.lints.rust]
async_fn_in_trait = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
