[package]
name = "paros-core"
description = "Sans-IO Multi-Paxos state machine core: no I/O, no clock, no randomness, zero dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

# paros-core is std-only with zero *default* dependencies — what keeps it
# portable to wasm32-unknown-unknown and trivially deterministic. The optional
# `serde` feature (below) only adds derives, no runtime; default builds (and the
# wasm CI gate) stay dependency-free.
[features]
# Derive Serialize/Deserialize on the public protocol types so a driver can put
# the *same* `Message` on the wire (no duplicate DTO). Off by default; enabled by
# paros-sim. serde is itself wasm-safe, so the portability guarantee holds.
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true
