[package]
name = "paros-sim"
description = "Deterministic-simulation harness for paros: the moonpool Process adapter, workloads, and oracles"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

# `native` (default-on) re-enables moonpool's production providers + fork-based
# exploration. Building with `--no-default-features` drops both for the wasm-able
# configuration the demo reuses (CI enforces this; see .github/workflows/rust.yml).
[features]
default = ["native"]
native = [
    "moonpool-sim/tokio-providers",
    "moonpool-sim/exploration",
    "moonpool-transport/tokio",
]

[dependencies]
# The node driver + RPC contract + MemStorage live in `paros` (the library); this
# crate is just the DST harness on top: the `Process` adapter, workloads, oracles.
paros = { path = "../paros", version = "0.2.0" }

# moonpool is pinned to a commit on `main` (not the crates.io release): it evolves
# fast and we track it deliberately, bumping `rev` by hand. Both crates come in
# without their production (tokio net/fs) features so the sim stays wasm-able; the
# `native` feature above layers those back on for the native runner.
moonpool-sim = { git = "https://github.com/PierreZ/moonpool", rev = "05402071497b21f306b220586af4a16e8a708ed5", default-features = false }
moonpool-transport = { git = "https://github.com/PierreZ/moonpool", rev = "05402071497b21f306b220586af4a16e8a708ed5", default-features = false }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# `macros` for `tokio::select!` in the driver/workload loops. The runtime itself
# comes from moonpool-sim.
tokio = { version = "1", features = ["macros"] }

[lints]
workspace = true
