[package]
name = "paros-storage"
description = "Storage trait implementations for paros: durable log + the faulty in-memory fake"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
paros-core = { path = "../paros-core", version = "0.1.0" }

[lints]
workspace = true
